# polychromatic-polarization

./: .gitignore  README.md  details.md  ppm-process.py  pyproject.toml
ppm_process/: __init__.py  ppm_process.py
ppm_processor/: __init__.py  cli.py  file_manager.py  image_corrections.py  ppm_process.py
tests/: test_processor.py
utils_smartpath/: fix_grad.ijm  main_run.bat  main_stripMMfilePolscope.py  move-files.py
