[project]
name = "ppm"
version = "0.2.0"
description = "Polychromatic Polarization Microscope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [  
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "scikit-image",
    "tk",
    "pillow",
    "tifffile"
    ]

[project.scripts]
ppm = "ppm_process:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
