[project]
name = "ppm_processor"
version = "0.2.0"
description = "Polychromatic Polarization Microscope Data Processor"
readme = "README.md"
authors = [
    {name = "JenuC", email = "jenu.chacko@wisc.edu"},
    {name = "Michael Nelson", email ="msnelson8@wisc.edu"}
]
dependencies = [  
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scikit-image>=0.19.0",
    "tifffile>=2021.7.2"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/JenuC/polychromatic-polarization"
"Bug Tracker" = "https://github.com/JenuC/polychromatic-polarization/issues"

[project.scripts]
ppp = "ppm_processor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
